# libglez

./: .gitignore  CMakeLists.txt  Makefile
include/: glez.h
src/: fonts.c
